# voxelized3d

./: .gitignore  LICENSE  README.md  TODO.txt  build_bindings.sh  dub.json
assets/shaders/: texture_color.frag
bindings/: CMakeLists.txt  FastNoise.h  cuda_noise.cuh  lib.cpp  sampling.cu  stb_image.cpp
bindings/contouring/: GeoCommon.h  HashMap.h  ModelReader.h  PLYReader.h  dc.cpp  eigen.cpp  eigen.h  intersection.h  octree.cpp  octree.h  qef.cpp
bindings/mesh/: mechanic.sog
src/: RenderingEngine.d  amdc.d  amdcTaken.d  amdc_.d  app.d  arraylist.d  bindings.d  density.d  graphics.d  hermite.d  lapacke.d  math.d  matrix.d  render.d  tests.d  traits.d  ucms.d  umdc.d  util.d
